# DataStructureAlgorithmProject

./: CMakeLists.txt  DatabaseStorage.cpp  DatabaseStorage.h  GUIManager.cpp  GUIManager.h  InfoNode.h  LinearRegression.cpp  LinearRegression.h  Observer.cpp  Observer.h  QueueManager.cpp  QueueManager.h  README.md  SensorManager.cpp  SensorManager.h  Statistic.cpp  Statistic.h  Statistics.cpp  Statistics.h  TemperatureSensor.cpp  TemperatureSensor.h  TemperatureStatistics.cpp  TemperatureStatistics.h  main  main.cpp
database/: database.json
